# mcp-shield

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: threat-model.md
policies/: default.yaml
src/mcp_shield/: __init__.py  audit.py  cli.py  policy.py  proxy.py  scanner.py
src/mcp_shield/detectors/: __init__.py  base.py  injection.py  llm_judge.py  secrets.py
tests/: test_audit.py  test_detectors.py  test_policy.py  test_scanner.py
tests/fixtures/: malicious_tools.json
