[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-shield"
version = "0.1.0"
description = "Security gateway/firewall for MCP servers — intercepts and scans tool definitions and calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MCP Shield Contributors" }]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
mcp-shield = "mcp_shield.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_shield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
